--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ h6 {
 }
 
 .more-about-speaker {
-  padding-top: 30px;
+  padding-top: 15px;
   font-family: Lato, serif;
 }
 
@@ -526,6 +526,10 @@ footer {
   #logo {
     width: 10%;
     display: block;
+  }
+
+  #logo:hover {
+    cursor: pointer;
   }
 
   .menu-list {
