Change our program section button bgcolor so that it will be accessible

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ h6 {
 }
 
 .our-program-join-btn {
-  background-color: #ff4f38;
+  background-color: #cd3f3f;
   color: #fff;
   height: 60px;
   text-align: center;
