--- a/style.css
+++ b/style.css
@@ -448,6 +448,14 @@ footer {
 .see-past-img {
   width: 100%;
   opacity: 0.5;
+  transition: all ease-in-out 0.3s;
+}
+
+.see-past-img:hover,
+.see-past-img2:hover {
+  opacity: 1;
+  cursor: pointer;
+  transition: all ease-in-out 0.3s;
 }
 
 .footer {
